2010-08-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/producers/icecast/icecast.py:
	  Make debug log messages on icecast server uniform so they're
	  much easier to grep consistently.

2010-08-04  Xavier Queralt  <xqueralt@flumotion.com>

	* flumotion/component/feedcomponent.py:
	Fix a typpo
	* flumotion/component/feedcomponent010.py:
	Reset headers backlog when we receive a NewSegment event.

2010-08-02  Xavier Queralt  <xqueralt@flumotion.com>

	* flumotion/component/producers/playlist/playlist.py:
	With the default value of clock type (monotonic) we got dates from the
	70s. Set it to realtime so we don't have to wait 40 years to see the
	playlist videos.

2010-08-02  Xavier Queralt  <xqueralt@flumotion.com>

	* flumotion/worker/checks/device.py:
	Use a generic error message instead of the firewire one.

2010-08-02  Xavier Queralt  <xqueralt@flumotion.com>

	* env.in:
	Let env be a symbolic link and figure out the correct path

2010-07-29  Jan Urbanski  <jurbanski@flumotion.com>

	* misc/flu-uninstalled:
	Revert previous mistaken commit.

2010-07-29  Jan Urbanski  <jurbanski@flumotion.com>

	* misc/flu-uninstalled:
	Do not run flu-uninstalled with -i.

2010-07-27  Xavier Queralt <xqueralt@gmail.com>

	* pkg/ubuntu-jaunty/changelog:
	Update development package
	* pkg/ubuntu-jaunty/control:
	Add myself as maitainer

2010-07-27  Xavier Queralt <xqueralt@gmail.com>

	* flumotion/common/config.py:
	Reintroduce the removed (in r8746) "socket" attribute to make
	Julien happy this time.

2010-07-26  Thodoris Paschidis <tpaschidis@flumotion.com>

	* flumotion/test/test_common_watched.py:
	Added some tests to make test complete.

2010-07-26  Thodoris Paschidis <tpaschidis@flumotion.com>

    * flumotion/common/watched.py:
	Minor syntax error change.

2010-07-26  Thodoris Paschidis <tpaschidis@flumotion.com>

	* flumotion/common/watched.py:
	* flumotion/test/test_common_watched.py: